Fixed z-index issue fixes #69

--- a/Resources/views/@Toolbar/_resources/css/toolbar.less
+++ b/Resources/views/@Toolbar/_resources/css/toolbar.less
@@ -530,4 +530,5 @@
   position: fixed;
   bottom: 50px;
   right: 20px;
+  z-index: 2999;
 }
